--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello World
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IAnime</title>
+    <link rel="icon" href="./imgs/cPlPAcWe_400x400.jpg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&family=Secular+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <img src="./imgs/log.png" alt="" class="hime" />
+    <div class="container-chat">
+      <h1 class="logo">IA_nime</h1>
+      <h2 class="subtext">Escolhemos animes para você assistir!</h2>
+      <div class="chat" id="chat">
+        <p>
+          Bem Vindo ao IA_nime, vamos ajudar você a escolher seu proximo anime
+          para assistir
+        </p>
+        <p>Qual seu genero preferido de anime?</p>
+      </div>
+      <div class="chat-input">
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Anime-se"
+            aria-label="Anime-se"
+            aria-describedby="button-addon2"
+            id="answer"
+          />
+          <button class="btn btn-warning" type="button" id="button-addon2">
+            Enviar
+          </button>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="main.js"></script>
+  </body>
+</html>
